--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,31 +1,52 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
+# This is a basic workflow to help you get started with Actions
 
 name: Maven Package
 
-on:
-  release:
-    types: [created]
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the main branch
+on: [push]
 
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
-
+  analysis:
+    name: CheckStyle
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      #  - name: Run Google Code Analysis Here
+      #    run: java com.puppycrawl.tools.checkstyle.Main -c docs/google_checks.xml src/
+      - uses: actions/checkout@v2
+      - uses: dbelyaev/action-checkstyle@v0.1.1
+        with:
+          github_token: ${{ secrets.github_token }}
+          # Change reviewdog reporter if you need [github-pr-check, github-check, github-pr-review].
+          reporter: github-check
+          # Change reporter level if you need [info,warning,error].
+          # GitHub Status Check won't become failure with a warning.
+          level: warning
+          workdir: src/main
 
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+  build:
+    # The type of runner that the job will run on
+    name: Build Step
+    runs-on: ubuntu-latest
 
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Build with Maven
+        run: mvn clean compile test --batch-mode --fail-at-end
+      - name: Publish Test Report
+        if: ${{ always() }}
+        uses: scacap/action-surefire-report@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
