--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
+  <!-- can look up in https://mvnrepository.com/artifact/junit/junit/4.13.2 -->
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
