--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,8 +4,7 @@ name: Maven Package
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
-on: 
-  workflow_dispatch:
+on: [push]
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
