--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,9 +29,19 @@ jobs:
           reporter: github-check
           # Change reporter level if you need [info,warning,error].
           # GitHub Status Check won't become failure with a warning.
-          filter: diff_context
+          filter_mode:: diff_context
           level: warning
           workdir: src/main
+  
+  test:
+    name: reviewdog (github-check)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run reviewdog
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          golint ./... | reviewdog -f=golint -reporter=github-pr-check -filter-mode=nofilter
 
   build:
     # The type of runner that the job will run on
