--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
           reporter: github-check
           # Change reporter level if you need [info,warning,error].
           # GitHub Status Check won't become failure with a warning.
-          filter_mode:: file
+          filter_mode: file
           level: warning
           workdir: src/main
 
