--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,23 +31,4 @@ jobs:
           # GitHub Status Check won't become failure with a warning.
           filter_mode: added
           level: warning
-          workdir: src/main
-
-  build:
-    # The type of runner that the job will run on
-    name: Build Step
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Build with Maven
-        run: mvn clean compile test --batch-mode --fail-at-end
-      - name: Publish Test Report
-        if: ${{ always() }}
-        uses: scacap/action-surefire-report@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          workdir: src
