--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,3 +32,17 @@ jobs:
           filter_mode: added
           level: warning
           workdir: src
+          
+  build:
+    # The type of runner that the job will run on
+    name: Build Step
+    runs-on: ubuntu-latest
+   
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Build with Maven
+        run:  java -jar checkstyle-8.45-all.jar -c checkstyle.xml *.java
