--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,7 +46,8 @@ jobs:
         with:
           java-version: 1.8
       - name: Build with Maven
-        run:  mvn clean compile test --batch-mode --fail-at-end
+        run:  cat checkstyle.xml
+        #mvn clean compile test --batch-mode --fail-at-end
       - name: Publish Test Report
         if: ${{ always() }}
         uses: scacap/action-surefire-report@v1
