--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           java-version: 1.8
       - name: Build with Maven
-        run:  cat checkstyle.xml
+        run:  cat pom.xml
         #mvn clean compile test --batch-mode --fail-at-end
       - name: Publish Test Report
         if: ${{ always() }}
