--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,27 +12,26 @@ jobs:
   analysis:
     name: CheckStyle
     runs-on: ubuntu-latest
-
+    
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
-      #  - name: Run Google Code Analysis Here
-      #    run: java com.puppycrawl.tools.checkstyle.Main -c docs/google_checks.xml src/
+          java-version: 1.8        
+      #- name: Run Google Code Analysis Here
+      #  run: java com.puppycrawl.tools.checkstyle.Main -c docs/google_checks.xml src/
       - uses: actions/checkout@v2
       - uses: dbelyaev/action-checkstyle@v0.1.1
         with:
+          checkstyle_config: google-java-format
           github_token: ${{ secrets.github_token }}
           # Change reviewdog reporter if you need [github-pr-check, github-check, github-pr-review].
           reporter: github-check
           # Change reporter level if you need [info,warning,error].
           # GitHub Status Check won't become failure with a warning.
-          filter_mode: added
           level: warning
-          path: '**/checkstyle-result.xml'
-          workdir: src
+          #workdir: src/main
           
   build:
     # The type of runner that the job will run on
