--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: dbelyaev/action-checkstyle@v0.1.1
         with:
-          checkstyle_config: google-java-format
+          checkstyle_config: google_checks.xml
           github_token: ${{ secrets.github_token }}
           # Change reviewdog reporter if you need [github-pr-check, github-check, github-pr-review].
           reporter: github-check
@@ -32,23 +32,4 @@ jobs:
           # GitHub Status Check won't become failure with a warning.
           level: warning
           #workdir: src/main
-          
-  build:
-    # The type of runner that the job will run on
-    name: Build Step
-    runs-on: ubuntu-latest
-   
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Build with Maven
-        run:  cat pom.xml
-        #mvn clean compile test --batch-mode --fail-at-end
-      - name: Publish Test Report
-        if: ${{ always() }}
-        uses: scacap/action-surefire-report@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+  
