--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -38,8 +38,10 @@ jobs:
    
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+        with:
+          repository: ${{ env.parent_repo }}
+          token: ${{ secrets.TOKEN }}
+      - uses: actions/checkout@v2
       - name: mvn site
         run:  mvn site
       - name: mvn checkstyle
@@ -48,4 +50,4 @@ jobs:
         if: ${{ always() }}
         uses: scacap/action-surefire-report@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          name: Compile-Run-Report
